k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollify-db
  namespace: pollify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pollify-db
  template:
    metadata:
      labels:
        app: pollify-db
    spec:
      containers:
        - name: postgres
          image: pollify-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /usr/local/pgsql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata

---
apiVersion: v1
kind: Service
metadata:
  name: pollify-db
  namespace: pollify
spec:
  selector:
    app: pollify-db
  ports:
    - port: 5432
      targetPort: 5432
