k8s/pollify-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollify-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pollify
  template:
    metadata:
      labels:
        app: pollify
    spec:
      containers:
        - name: pollify
          image: pollify-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pollify-service
spec:
  selector:
    app: pollify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
